--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "grunt-nodemon": "^0.4.2",
     "mocha": "^3.0.2",
     "morgan": "^1.7.0",
-    "request": "^2.74.0"
+    "request": "^2.74.0",
+    "unirest": "^0.5.1"
   }
 }
